b=583844; use correct pack alignment when reading via ReadPixels; also use EXT_bgra correctly; r=bjacob